--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.1",
+    "redux": "^4.0.5",
     "styled-components": "^4.3.2"
   },
   "scripts": {
